@@ -1,3 +1,10 @@
+2009-11-10  Alexey Proskuryakov  <ap@apple.com>
+
+        Qt build fix.
+
+        * platform/network/ResourceHandle.h: Only inherit from AuthenticationClient on platforms
+        that use ResourceHandle as a delegate (Mac, CFNetwork, Curl).
+
 2009-11-10  Beth Dakin  <bdakin@apple.com>
 
         Tiger build fix. No review needed.
